# scratchboy

./: .gitignore  CMakeLists.txt  README.md  go.mod  instruction_table.cpp  main.go
cpu/: addrbus.go  arithflag.go  cpu.go  memorybus.go  r8operand.go  register.go  registerfile.go  virtualreg.go
cpu/decode/: block0.go  block0bits.go  block0ids.go  block0imm.go  block0masks.go  block1.go  block2.go  block3.go  block3bits.go  block3imm.go  cbprefix.go  decode.go  decode_test.go  disasembly_test.go  enums.go  format.go  identifiers.go  illegal.go  octalRow00to07.go  octalRow20to27.go  octalRow30to37.go  octalrowprefixed.go  octals.go  opcode.go  operand.go  translate.go
cpu/decode/testdata/: README.MD
cpu/instruction/: package.go
cpu/register/: control.go  file.go  generalpurpose.go  register.go
disassembler/: disasembler_test.go  disassembler.go  parse.go
disassembler/testdata/: README.MD
internal/cpu/: cpu.go
internal/cpu/decode/: decode_test.go  octalRow10to17.go  package.go
memory/: banks.go  bus.go
nums/: byte.go  dbyte.go
register/: file.go  register.go  virtual.go  virtualreg.go
scripts/linux/: build_debug.sh
scripts/windows/: build_debug.ps1
src/: main  main.cpp
src/allocator/: heap.cpp  heap.h  vtable_allocator.h
src/cpu/: add.cpp  cpu.cpp  cpu.h  emu_cpu.cpp  emu_cpu.h  emu_memory_bus.cpp  emu_memory_bus.h  emu_register_set.cpp  emu_register_set.h  emulated_registers.cpp  emulated_registers.h  instruction.cpp  instruction.h  instructions.h  memory_bus.cpp  memory_bus.h  register_bank.cpp  register_bank.h  register_file.cpp  register_file.h  register_set.cpp  register_set.h  types.h
src/cpu/decode/: bool_byte.cpp  bool_byte.h  opcode.cpp  opcode.h
src/cpu/instructions/: add.cpp  add.h  instruction.h  jp.cpp  opcodes.h  prefix_cb.cpp  raw.h  table.h
src/error/: status_codes.h
src/list/: array_list.h  linked_list.h
src/map/: fnv_hash.h  hash_map.h
src/tree/: binary_tree.h
src/types/: word.h
src/util/: bits.h  scope_exit.h
types/: types.go
